// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ storybook ] [ Molecules/Task ] should render Checked 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="card color-base size-sm is-clickable"
    >
      <div
        class="task type-undefined is-checked"
      >
        <div
          class="content"
        >
          <div
            class="check-container"
          >
            <div
              class="icon color-muted size-md background-transparent is-clickable"
              style="width: 35px; height: 35px;"
            >
              <svg
                height="35"
                viewBox="5 1 20 20"
                width="35"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M14.93 20.86C9.45472 20.86 5 16.4053 5 10.93C5 5.45472 9.45472 1 14.93 1C20.4053 1 24.86 5.45472 24.86 10.93C24.86 16.4053 20.4053 20.86 14.93 20.86ZM14.93 2.09095C10.0559 2.09095 6.09095 6.05591 6.09095 10.93C6.09095 15.8041 10.0559 19.769 14.93 19.769C19.8041 19.769 23.769 15.8041 23.769 10.93C23.769 6.05591 19.8041 2.09095 14.93 2.09095Z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M13.744 15.221L8.67871 10.1423L9.45059 9.37155L13.7458 13.6773L20.41 7.01251L21.1807 7.78439L13.744 15.221Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            class="spacer horizontal"
            style="height: 100%; max-height: auto; width: 5px;"
          />
          <p
            class="paragraph color-muted size-md weight-medium is-striked"
          >
            Sir Goblin-town feels characters ruined precautions.
          </p>
        </div>
        <div
          class="spacer horizontal"
          style="height: 100%; max-height: auto; width: 15px;"
        />
        <div
          class="icon color-base size-sm background-inverted is-clickable"
          style="width: 25px; height: 25px;"
        >
          <svg
            height="25"
            viewBox="-1 0 12 12"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6.72534 3.71014H5.97808V9.68822H6.72534V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M5.23071 3.71014H4.48345V9.68822H5.23071V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.73633 3.71014H2.98907V9.68822H3.73633V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M9.71436 1.46838H-2.28882e-05V2.21564H9.71436V1.46838Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.01523 1.842H3.71018V1.09474C3.71018 0.874294 3.88952 0.694952 4.10996 0.694952H5.60448C5.82492 0.694952 6.00427 0.874294 6.00427 1.09474V1.842H6.69922V1.09474C6.69922 0.49095 6.2079 0 5.60448 0H4.10996C3.50655 0 3.01523 0.49095 3.01523 1.09474V1.842Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M2.61523 11.93H7.09879C7.70183 11.93 8.22977 11.4409 8.27573 10.8398L8.96582 1.87077L8.2208 1.81323L7.53071 10.7826C7.51427 10.9959 7.31251 11.1827 7.09879 11.1827H2.61523C2.40152 11.1827 2.19976 10.9959 2.18332 10.783L1.49322 1.81323L0.748204 1.87077L1.4383 10.8398C1.48426 11.4409 2.01219 11.93 2.61523 11.93Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Molecules/Task ] should render Default 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="card color-base size-sm is-clickable"
    >
      <div
        class="task type-undefined"
      >
        <div
          class="content"
        >
          <div
            class="check-container"
          >
            <span
              class="check"
            />
          </div>
          <div
            class="spacer horizontal"
            style="height: 100%; max-height: auto; width: 5px;"
          />
          <p
            class="paragraph color-base size-md weight-medium"
          >
            Sir Goblin-town feels characters ruined precautions.
          </p>
        </div>
        <div
          class="spacer horizontal"
          style="height: 100%; max-height: auto; width: 15px;"
        />
        <div
          class="icon color-base size-sm background-inverted is-clickable"
          style="width: 25px; height: 25px;"
        >
          <svg
            height="25"
            viewBox="-1 0 12 12"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6.72534 3.71014H5.97808V9.68822H6.72534V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M5.23071 3.71014H4.48345V9.68822H5.23071V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.73633 3.71014H2.98907V9.68822H3.73633V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M9.71436 1.46838H-2.28882e-05V2.21564H9.71436V1.46838Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.01523 1.842H3.71018V1.09474C3.71018 0.874294 3.88952 0.694952 4.10996 0.694952H5.60448C5.82492 0.694952 6.00427 0.874294 6.00427 1.09474V1.842H6.69922V1.09474C6.69922 0.49095 6.2079 0 5.60448 0H4.10996C3.50655 0 3.01523 0.49095 3.01523 1.09474V1.842Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M2.61523 11.93H7.09879C7.70183 11.93 8.22977 11.4409 8.27573 10.8398L8.96582 1.87077L8.2208 1.81323L7.53071 10.7826C7.51427 10.9959 7.31251 11.1827 7.09879 11.1827H2.61523C2.40152 11.1827 2.19976 10.9959 2.18332 10.783L1.49322 1.81323L0.748204 1.87077L1.4383 10.8398C1.48426 11.4409 2.01219 11.93 2.61523 11.93Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Molecules/Task ] should render Long 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="card color-base size-sm is-clickable"
    >
      <div
        class="task type-undefined"
      >
        <div
          class="content"
        >
          <div
            class="check-container"
          >
            <span
              class="check"
            />
          </div>
          <div
            class="spacer horizontal"
            style="height: 100%; max-height: auto; width: 5px;"
          />
          <p
            class="paragraph color-base size-md weight-medium"
          >
            Sir Goblin-town feels characters ruined precautions.
          </p>
        </div>
        <div
          class="spacer horizontal"
          style="height: 100%; max-height: auto; width: 15px;"
        />
        <div
          class="icon color-base size-sm background-inverted is-clickable"
          style="width: 25px; height: 25px;"
        >
          <svg
            height="25"
            viewBox="-1 0 12 12"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6.72534 3.71014H5.97808V9.68822H6.72534V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M5.23071 3.71014H4.48345V9.68822H5.23071V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.73633 3.71014H2.98907V9.68822H3.73633V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M9.71436 1.46838H-2.28882e-05V2.21564H9.71436V1.46838Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.01523 1.842H3.71018V1.09474C3.71018 0.874294 3.88952 0.694952 4.10996 0.694952H5.60448C5.82492 0.694952 6.00427 0.874294 6.00427 1.09474V1.842H6.69922V1.09474C6.69922 0.49095 6.2079 0 5.60448 0H4.10996C3.50655 0 3.01523 0.49095 3.01523 1.09474V1.842Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M2.61523 11.93H7.09879C7.70183 11.93 8.22977 11.4409 8.27573 10.8398L8.96582 1.87077L8.2208 1.81323L7.53071 10.7826C7.51427 10.9959 7.31251 11.1827 7.09879 11.1827H2.61523C2.40152 11.1827 2.19976 10.9959 2.18332 10.783L1.49322 1.81323L0.748204 1.87077L1.4383 10.8398C1.48426 11.4409 2.01219 11.93 2.61523 11.93Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Molecules/Task ] should render Pending 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="card color-base size-sm is-draggable"
    >
      <div
        class="task type-undefined"
      >
        <div
          class="content"
        >
          <div
            class="icon color-base size-sm background-transparent"
            style="width: 25px; height: 25px;"
          >
            <svg
              height="25"
              viewBox="-2 0 14 15"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 14V12H2V14H0ZM4 14V12H6V14H4ZM8 14V12H10V14H8ZM0 10V8H2V10H0ZM4 10V8H6V10H4ZM8 10V8H10V10H8ZM0 6V4H2V6H0ZM4 6V4H6V6H4ZM8 6V4H10V6H8ZM0 2V0H2V2H0ZM4 2V0H6V2H4ZM8 2V0H10V2H8Z"
              />
            </svg>
          </div>
          <div
            class="spacer horizontal"
            style="height: 100%; max-height: auto; width: 5px;"
          />
          <p
            class="paragraph color-base size-md weight-medium"
          >
            Sir Goblin-town feels characters ruined precautions.
          </p>
        </div>
        <div
          class="spacer horizontal"
          style="height: 100%; max-height: auto; width: 15px;"
        />
        <div
          class="icon color-base size-sm background-inverted is-clickable"
          style="width: 25px; height: 25px;"
        >
          <svg
            height="25"
            viewBox="-1 0 12 12"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6.72534 3.71014H5.97808V9.68822H6.72534V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M5.23071 3.71014H4.48345V9.68822H5.23071V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.73633 3.71014H2.98907V9.68822H3.73633V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M9.71436 1.46838H-2.28882e-05V2.21564H9.71436V1.46838Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.01523 1.842H3.71018V1.09474C3.71018 0.874294 3.88952 0.694952 4.10996 0.694952H5.60448C5.82492 0.694952 6.00427 0.874294 6.00427 1.09474V1.842H6.69922V1.09474C6.69922 0.49095 6.2079 0 5.60448 0H4.10996C3.50655 0 3.01523 0.49095 3.01523 1.09474V1.842Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M2.61523 11.93H7.09879C7.70183 11.93 8.22977 11.4409 8.27573 10.8398L8.96582 1.87077L8.2208 1.81323L7.53071 10.7826C7.51427 10.9959 7.31251 11.1827 7.09879 11.1827H2.61523C2.40152 11.1827 2.19976 10.9959 2.18332 10.783L1.49322 1.81323L0.748204 1.87077L1.4383 10.8398C1.48426 11.4409 2.01219 11.93 2.61523 11.93Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Molecules/Task ] should render PendingTypes 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="card color-base size-sm is-draggable"
    >
      <div
        class="task type-active"
      >
        <div
          class="content"
        >
          <div
            class="icon color-base size-sm background-transparent"
            style="width: 25px; height: 25px;"
          >
            <svg
              height="25"
              viewBox="-2 0 14 15"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 14V12H2V14H0ZM4 14V12H6V14H4ZM8 14V12H10V14H8ZM0 10V8H2V10H0ZM4 10V8H6V10H4ZM8 10V8H10V10H8ZM0 6V4H2V6H0ZM4 6V4H6V6H4ZM8 6V4H10V6H8ZM0 2V0H2V2H0ZM4 2V0H6V2H4ZM8 2V0H10V2H8Z"
              />
            </svg>
          </div>
          <div
            class="spacer horizontal"
            style="height: 100%; max-height: auto; width: 5px;"
          />
          <p
            class="paragraph color-base size-md weight-medium"
          >
            Sir Goblin-town feels characters ruined precautions.
          </p>
        </div>
        <div
          class="spacer horizontal"
          style="height: 100%; max-height: auto; width: 15px;"
        />
        <div
          class="icon color-base size-sm background-inverted is-clickable"
          style="width: 25px; height: 25px;"
        >
          <svg
            height="25"
            viewBox="-1 0 12 12"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6.72534 3.71014H5.97808V9.68822H6.72534V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M5.23071 3.71014H4.48345V9.68822H5.23071V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.73633 3.71014H2.98907V9.68822H3.73633V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M9.71436 1.46838H-2.28882e-05V2.21564H9.71436V1.46838Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.01523 1.842H3.71018V1.09474C3.71018 0.874294 3.88952 0.694952 4.10996 0.694952H5.60448C5.82492 0.694952 6.00427 0.874294 6.00427 1.09474V1.842H6.69922V1.09474C6.69922 0.49095 6.2079 0 5.60448 0H4.10996C3.50655 0 3.01523 0.49095 3.01523 1.09474V1.842Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M2.61523 11.93H7.09879C7.70183 11.93 8.22977 11.4409 8.27573 10.8398L8.96582 1.87077L8.2208 1.81323L7.53071 10.7826C7.51427 10.9959 7.31251 11.1827 7.09879 11.1827H2.61523C2.40152 11.1827 2.19976 10.9959 2.18332 10.783L1.49322 1.81323L0.748204 1.87077L1.4383 10.8398C1.48426 11.4409 2.01219 11.93 2.61523 11.93Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="card color-base size-sm is-draggable"
    >
      <div
        class="task type-standby"
      >
        <div
          class="content"
        >
          <div
            class="icon color-base size-sm background-transparent"
            style="width: 25px; height: 25px;"
          >
            <svg
              height="25"
              viewBox="-2 0 14 15"
              width="25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 14V12H2V14H0ZM4 14V12H6V14H4ZM8 14V12H10V14H8ZM0 10V8H2V10H0ZM4 10V8H6V10H4ZM8 10V8H10V10H8ZM0 6V4H2V6H0ZM4 6V4H6V6H4ZM8 6V4H10V6H8ZM0 2V0H2V2H0ZM4 2V0H6V2H4ZM8 2V0H10V2H8Z"
              />
            </svg>
          </div>
          <div
            class="spacer horizontal"
            style="height: 100%; max-height: auto; width: 5px;"
          />
          <p
            class="paragraph color-base size-md weight-medium"
          >
            Sir Goblin-town feels characters ruined precautions.
          </p>
        </div>
        <div
          class="spacer horizontal"
          style="height: 100%; max-height: auto; width: 15px;"
        />
        <div
          class="icon color-base size-sm background-inverted is-clickable"
          style="width: 25px; height: 25px;"
        >
          <svg
            height="25"
            viewBox="-1 0 12 12"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6.72534 3.71014H5.97808V9.68822H6.72534V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M5.23071 3.71014H4.48345V9.68822H5.23071V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.73633 3.71014H2.98907V9.68822H3.73633V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M9.71436 1.46838H-2.28882e-05V2.21564H9.71436V1.46838Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.01523 1.842H3.71018V1.09474C3.71018 0.874294 3.88952 0.694952 4.10996 0.694952H5.60448C5.82492 0.694952 6.00427 0.874294 6.00427 1.09474V1.842H6.69922V1.09474C6.69922 0.49095 6.2079 0 5.60448 0H4.10996C3.50655 0 3.01523 0.49095 3.01523 1.09474V1.842Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M2.61523 11.93H7.09879C7.70183 11.93 8.22977 11.4409 8.27573 10.8398L8.96582 1.87077L8.2208 1.81323L7.53071 10.7826C7.51427 10.9959 7.31251 11.1827 7.09879 11.1827H2.61523C2.40152 11.1827 2.19976 10.9959 2.18332 10.783L1.49322 1.81323L0.748204 1.87077L1.4383 10.8398C1.48426 11.4409 2.01219 11.93 2.61523 11.93Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Molecules/Task ] should render Types 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="card color-base size-sm is-clickable"
    >
      <div
        class="task type-active"
      >
        <div
          class="content"
        >
          <div
            class="check-container"
          >
            <span
              class="check"
            />
          </div>
          <div
            class="spacer horizontal"
            style="height: 100%; max-height: auto; width: 5px;"
          />
          <p
            class="paragraph color-base size-md weight-medium"
          >
            Sir Goblin-town feels characters ruined precautions.
          </p>
        </div>
        <div
          class="spacer horizontal"
          style="height: 100%; max-height: auto; width: 15px;"
        />
        <div
          class="icon color-base size-sm background-inverted is-clickable"
          style="width: 25px; height: 25px;"
        >
          <svg
            height="25"
            viewBox="-1 0 12 12"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6.72534 3.71014H5.97808V9.68822H6.72534V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M5.23071 3.71014H4.48345V9.68822H5.23071V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.73633 3.71014H2.98907V9.68822H3.73633V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M9.71436 1.46838H-2.28882e-05V2.21564H9.71436V1.46838Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.01523 1.842H3.71018V1.09474C3.71018 0.874294 3.88952 0.694952 4.10996 0.694952H5.60448C5.82492 0.694952 6.00427 0.874294 6.00427 1.09474V1.842H6.69922V1.09474C6.69922 0.49095 6.2079 0 5.60448 0H4.10996C3.50655 0 3.01523 0.49095 3.01523 1.09474V1.842Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M2.61523 11.93H7.09879C7.70183 11.93 8.22977 11.4409 8.27573 10.8398L8.96582 1.87077L8.2208 1.81323L7.53071 10.7826C7.51427 10.9959 7.31251 11.1827 7.09879 11.1827H2.61523C2.40152 11.1827 2.19976 10.9959 2.18332 10.783L1.49322 1.81323L0.748204 1.87077L1.4383 10.8398C1.48426 11.4409 2.01219 11.93 2.61523 11.93Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="card color-base size-sm is-clickable"
    >
      <div
        class="task type-standby"
      >
        <div
          class="content"
        >
          <div
            class="check-container"
          >
            <span
              class="check"
            />
          </div>
          <div
            class="spacer horizontal"
            style="height: 100%; max-height: auto; width: 5px;"
          />
          <p
            class="paragraph color-base size-md weight-medium"
          >
            Sir Goblin-town feels characters ruined precautions.
          </p>
        </div>
        <div
          class="spacer horizontal"
          style="height: 100%; max-height: auto; width: 15px;"
        />
        <div
          class="icon color-base size-sm background-inverted is-clickable"
          style="width: 25px; height: 25px;"
        >
          <svg
            height="25"
            viewBox="-1 0 12 12"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6.72534 3.71014H5.97808V9.68822H6.72534V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M5.23071 3.71014H4.48345V9.68822H5.23071V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.73633 3.71014H2.98907V9.68822H3.73633V3.71014Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M9.71436 1.46838H-2.28882e-05V2.21564H9.71436V1.46838Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M3.01523 1.842H3.71018V1.09474C3.71018 0.874294 3.88952 0.694952 4.10996 0.694952H5.60448C5.82492 0.694952 6.00427 0.874294 6.00427 1.09474V1.842H6.69922V1.09474C6.69922 0.49095 6.2079 0 5.60448 0H4.10996C3.50655 0 3.01523 0.49095 3.01523 1.09474V1.842Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M2.61523 11.93H7.09879C7.70183 11.93 8.22977 11.4409 8.27573 10.8398L8.96582 1.87077L8.2208 1.81323L7.53071 10.7826C7.51427 10.9959 7.31251 11.1827 7.09879 11.1827H2.61523C2.40152 11.1827 2.19976 10.9959 2.18332 10.783L1.49322 1.81323L0.748204 1.87077L1.4383 10.8398C1.48426 11.4409 2.01219 11.93 2.61523 11.93Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
